codex-rs/core/tests/suite/snapshots/all__suite__mcp_tool_exposure__deferred_tools_initial_unchanged_and_removed.snap
---
source: core/tests/suite/mcp_tool_exposure.rs
assertion_line: 1218
expression: "format_labeled_requests_snapshot(\"Initially available deferred tools remain unchanged until disabling Calendar removes them.\",\n&[(\"Initially available\", &requests[0]),\n(\"Unchanged follow-up\", &requests[1]), (\"Removed and empty\", &requests[2]),],)"
---
Scenario: Initially available deferred tools remain unchanged until disabling Calendar removes them.

## Window 1
-- request 1 (turn; Initially available) --
00:message/developer:
    <MODEL_INSTRUCTIONS>
01:message/developer[4]:
    [01] <context_continuation>
        The runtime manages context compaction or rollover. Context-window capacity is not a task deadline or th...real failures accurately instead of claiming success. [hash=1eca8308a77806e2]
        </context_continuation>
    [02] <PERMISSIONS_INSTRUCTIONS>
    [03] <APPS_INSTRUCTIONS>
    [04] <tools>
        Deferred tool namespaces:
        - mcp__codex_apps__calendar: Plan events and manage your calendar.
        </tools>
02:message/user:
    <ENVIRONMENT_CONTEXT>
03:message/user:
    inspect initially available deferred tools
-- request 2 (turn; Unchanged follow-up) --
04:message/assistant:
    done
05:message/user:
    inspect unchanged deferred tools

## Window 2 (after request 2: settings changed (tools))
-- request 3 (turn; Removed and empty) --
00:message/developer:
    <MODEL_INSTRUCTIONS>
01:message/developer[4]:
    [01] <context_continuation>
        The runtime manages context compaction or rollover. Context-window capacity is not a task deadline or th...real failures accurately instead of claiming success. [hash=1eca8308a77806e2]
        </context_continuation>
    [02] <PERMISSIONS_INSTRUCTIONS>
    [03] <APPS_INSTRUCTIONS>
    [04] <tools>
        Deferred tool namespaces:
        - mcp__codex_apps__calendar: Plan events and manage your calendar.
        </tools>
02:message/user:
    <ENVIRONMENT_CONTEXT>
03:message/user:
    inspect initially available deferred tools
04:message/assistant:
    done
05:message/user:
    inspect unchanged deferred tools
06:message/assistant:
    done
07:message/developer:
    <tools>
    Removed deferred tool namespaces:
    - mcp__codex_apps__calendar: Plan events and manage your calendar.
    No deferred tool namespaces remain.
    </tools>
08:message/user:
    inspect removed deferred tools
