codex-rs/core/tests/suite/snapshots/all__suite__mcp_tool_exposure__deferred_tools_resume_without_duplicate_update.snap
---
source: core/tests/suite/mcp_tool_exposure.rs
assertion_line: 1329
expression: "context_snapshot::format_context_snapshot(\"Persisted deferred tools remain unchanged after resuming the thread.\",\n&[SnapshotEntry::items(&requests[0].input()).labeled(\"Before resume\"),\nSnapshotEntry::items(&requests[1].input()).labeled(\"After resume\"),],\n&ContextSnapshotOptions::default().rewrite_known_segments(),)"
---
Scenario: Persisted deferred tools remain unchanged after resuming the thread.

## Window 1
-- request 1 (items; Before resume) --
00:message/developer:
    <MODEL_INSTRUCTIONS>
01:message/developer[4]:
    [01] <context_continuation>
        The runtime manages context compaction or rollover. Context-window capacity is not a task deadline or th...real failures accurately instead of claiming success. [hash=1eca8308a77806e2]
        </context_continuation>
    [02] <PERMISSIONS_INSTRUCTIONS>
    [03] <APPS_INSTRUCTIONS>
    [04] <tools>
        Deferred tool namespaces:
        - mcp__codex_apps__calendar: Plan events and manage your calendar.
        </tools>
02:message/user:
    <ENVIRONMENT_CONTEXT>
03:message/user:
    inspect deferred tools before resume

## Window 2 (after request 1: settings unavailable)
-- request 2 (items; After resume) --
00:message/developer:
    <MODEL_INSTRUCTIONS>
01:message/developer[4]:
    [01] <context_continuation>
        The runtime manages context compaction or rollover. Context-window capacity is not a task deadline or th...real failures accurately instead of claiming success. [hash=1eca8308a77806e2]
        </context_continuation>
    [02] <PERMISSIONS_INSTRUCTIONS>
    [03] <APPS_INSTRUCTIONS>
    [04] <tools>
        Deferred tool namespaces:
        - mcp__codex_apps__calendar: Plan events and manage your calendar.
        </tools>
02:message/user:
    <ENVIRONMENT_CONTEXT>
03:message/user:
    inspect deferred tools before resume
04:message/assistant:
    done
05:message/user:
    <ENVIRONMENT_CONTEXT>
06:message/user:
    inspect unchanged deferred tools after resume
